# PratikoAi-BE

./: .env.example  .env.preprod.example  .env.production.example  .env.production.template  .env.qa.example  .env.staging.example  .env.template  .figmaignore  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  .rag_alignment_index.json  .secrets.baseline  AGENT_IMPROVEMENTS_SUMMARY.md  API-KEY-SCALING.md  ARCHITECTURE_ROADMAP.md  ARCHITECTURE_ROADMAP.md.backup  CCNL_CALCULATOR_ENGINE.md  CCNL_SUCCESS_CRITERIA.md  CHANGELOG.md  CICD_SYSTEM.md  CLAUDE.md  COST_TRACKING_EXAMPLES.md  DATA_CLEANING_AUDIT.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  DUPLICATION_BUG_ROOT_CAUSE_ANALYSIS.md  DYNAMIC_KNOWLEDGE_COLLECTION_SYSTEM.md  Dockerfile  Dockerfile.postgres  E2E_TESTING_IMPLEMENTATION_GUIDE.md  EMAIL_CONFIGURATION.md  EMPTY_SESSION_FIX_SUMMARY.md  EXPERT_FEEDBACK_BUG_RETROSPECTIVE.md  EXPERT_FEEDBACK_IMPLEMENTATION_SUMMARY.md  FK_ANALYSIS.md  FRONTEND_SESSION_FIX_REQUIREMENTS.md  IMPLEMENTATION_SPEC.md  INCIDENT_RESPONSE_PLAYBOOK.md  (+97 more)
.claude/: SQLMODEL_QUICKREF.md  rss-domains.json  settings.example.json  settings.json  settings.local.json  subagent-names.json
__mocks__/: nanoid.js  react-markdown.js  remark-gfm.js
alembic/: env.py  env.py.backup
app/: __init__.py  main.py
archived/: __init__.py
caddy/: Caddyfile
config/: billing_plans.yaml  document_tiers.yaml  figma-tokens.config.js  figma.config.json  llm_models.yaml
deployment-orchestration/: CLAUDE.md  INDEX.md  INTELLIGENT_DEPLOYMENT_GUIDE.md  README.md  adaptive_deployment_engine.py  artifact_coordinator.py  deployment_config.yaml  example_usage.py  intelligent_deploy.py  notification_system.py  orchestrator.py  requirements.txt
docker/: init-flagsmith-db.sh
docs/: ADVANCED_VECTOR_SEARCH.md  ATOMIC_FACTS_IMPLEMENTATION_SUMMARY.md  ATOMIC_FACTS_INTEGRATION.md  CHAT_STORAGE_ARCHITECTURE.md  DATABASE_ARCHITECTURE.md  DATABASE_BACKUP_SYSTEM.md  DATABASE_ENCRYPTION.md  DEV-242-response-quality-summary.md  DEV-244-kb-source-urls-summary.md  DEV-245-response-quality-improvement-plan.md  DEV-250-response-quality-fix-summary.md  DEV-251-huggingface-intent-classifier.md  DEV-252-AI-Agent-Evaluation-Framework.md  DEV-258-data-quality-repair-prevention.md  E2E_RSS_TESTING_STRATEGY.md  EXPERT_MANAGEMENT_GUIDE.md  FAQ_AUTOMATION_SYSTEM.md  GDPR_DATA_DELETION.md  GDPR_DATA_EXPORT.md  HUGGINGFACE_MODELS_ANALYSIS.md  INDEX.md  ITALIAN_SUBSCRIPTIONS.md  LLM_RETRY_MECHANISMS.md  LOAD_TESTING.md  PostgreSQL_Full_Text_Search.md  QUALITY_ANALYSIS_SYSTEM.md  REGIONAL_TAX_VARIATIONS.md  USAGE_BASED_BILLING.md  env-inventory.md  intent-classifier-training-guide.md  pinecone-guardrails.md  schema_report.md
e2e/: proactivity.spec.ts  streaming.spec.ts
evals/: __init__.py  config.py  helpers.py  main.py  runner.py
examples/: ccnl_calculator_demo.py  ccnl_search_examples.py
failure-recovery-system/: INDEX.md  README.md  cicd_integration.py  decision_tree_engine.py  example_usage.py  failure_categorizer.py  recovery_orchestrator.py  requirements.txt
feature-flags/: CLAUDE.md  DEVELOPMENT_GUIDELINES.md  INDEX.md  README.md  feature_flag_service.py  requirements.txt
load_testing/: __init__.py  ci_test.py  config.py  framework.py  k6_tests.js  locust_tests.py  monitoring.py  run_tests.py
mcp-servers/: AWS_DEPLOYMENT_GUIDE.md  CLAUDE.md  INDEX.md  README.md
migrations/: create_payment_tables.sql  create_vector_metadata_tables.sql
monitoring/: .env.alerts.example  ALERTS.md  AUTOMATION_GUIDE.md  INDEX.md  METRICS_GLOSSARY.md  PHASE_4_SUMMARY.md  PRODUCTION_CHECKLIST.md  QUICK_START.md  README.md  RUNBOOKS.md  SETUP_STATUS.md  test_alerts.py
rollback-system/: CLAUDE.md  INDEX.md  README.md  TROUBLESHOOTING.md  health_monitor.py  health_monitor_config.yaml  monitor_rollback_integration.py  requirements.txt  rollback_orchestrator.py
scripts/: __init__.py  activate_rss_collection.py  analyze_gazzetta_data.py  audit_data_quality.py  backfill_publication_dates.py  backfill_rss_dates.py  backfill_text_quality.py  backup_database.sh  benchmark_golden_set_performance.py  benchmark_ranking_precision.py  bump_version.py  check_all_files.py  check_code.sh  check_coverage.py  check_critical_deps.py  check_minimum_test_count.py  check_sensitive_data.py  check_test_code_co_modification.py  check_test_files_exist.py  cleanup_irrelevant_gazzetta.py  deploy.py  docker-entrypoint.sh  fix_gazzetta_urls.py  fix_legge_199_code.py  generate-docs-index.js  generate_docs_index.py  generate_faq_embedding.py  generate_release_notes.py  import_regional_rates.py  ingest_ader_rottamazione_quinquies.py  ingest_rss.py  init_db_tables.py  migrate_to_encryption.py  model_management.sh  monitor_logs.sh  monitor_sse_logs.sh  next_issue.py  rag_audit.py  rag_audit_config.yml  rag_audit_config.yml.bak  (+49 more)
src/: middleware.ts
templates/: document_upload.html
terraform/: main.tf  variables.tf
tests/: conftest.py  test_advanced_circuit_breakers.py  test_annual_subscriptions.py  test_atomic_facts_extractor.py  test_business_plan_generator.py  test_business_valuation.py  test_cache_invalidation.py  test_cache_key.py  test_cached_llm_response.py  test_cassazione_integration.py  test_cassazione_models.py  test_cassazione_scheduler.py  test_cassazione_scraper.py  test_ccnl_calculator_engine.py  test_ccnl_database_integration.py  test_ccnl_database_models.py  test_ccnl_integration_features.py  test_ccnl_models.py  test_ccnl_priority1_data.py  test_ccnl_priority2.py  test_ccnl_priority3.py  test_ccnl_priority4.py  test_ccnl_priority5.py  test_ccnl_priority6.py  test_ccnl_search.py  test_ccnl_service.py  test_classification_integration.py  test_complete_block_formatting.py  test_convert_attachments_to_doc_facts.py  test_data_export.py  test_data_sources_integration.py  test_database_encryption.py  test_datetime_handling.py  test_document_analysis_security.py  test_document_parser.py  test_document_processing.py  test_domain_action_classifier.py  test_dynamic_knowledge_collection.py  test_faq_automation.py  test_financial_ratios.py  (+184 more)
(+2178 files in other folders)
