[project]
name = "langgraph-fastapi-template"
version = "0.1.0"
description = "LangGraph FastAPI Template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115.12",
    "langchain>=0.3.25,<1.0",
    "langchain-core>=0.3.58,<1.0",
    "langchain-openai>=0.3.16,<1.0",
    "langfuse==3.0.3",
    "langgraph>=0.4.1",
    "langgraph-checkpoint-postgres>=2.0.19",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.1",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "structlog>=25.2.0",
    "supabase>=2.15.0",
    "uvicorn>=0.34.0",
    "bcrypt>=4.3.0",
    "slowapi>=0.1.9",
    "email-validator>=2.2.0",
    "authlib>=1.4.0",
    "httpx>=0.27.0",
    "prometheus-client>=0.21.0",
    "starlette-prometheus>=0.7.0",
    "psutil>=6.1.0",
    "asgiref>=3.8.1",
    "duckduckgo-search>=6.2.0",
    "langchain-community>=0.3.20,<1.0",
    "tqdm>=4.67.1",
    "colorama>=0.4.6",
    "anthropic>=0.40.0",
    "redis[hiredis]>=5.0.0",
    "stripe>=7.0.0",
    "sentence-transformers>=2.2.0",
    "feedparser>=6.0.10",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dateutil>=2.8.0",
    # Document processing dependencies
    "PyPDF2>=3.0.1",
    "pdfplumber>=0.9.0",
    "pytesseract>=0.3.10",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pdf2image>=1.16.0",
    "Pillow>=10.0.0",
    "python-magic>=0.4.27",
    "cryptography>=41.0.0",
    # Load testing dependencies
    "asyncpg>=0.29.0",
    "aiofiles>=24.1.0",
    "locust>=2.31.4",
    # Security scanning dependencies
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.2",
    "reportlab>=4.4.3",
    # Vector database dependencies
    "pgvector>=0.2.0",
]

[project.optional-dependencies]
dev = ["black", "isort", "flake8", "ruff", "djlint==1.36.4"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
    "ruff>=0.11.4",
]
test = ["httpx>=0.28.1", "pytest>=8.3.5", "pytest-cov>=6.0.0"]


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
# Coverage enabled with thresholds (matches frontend jest.config.js)
addopts = [
    "-v",
    "--tb=short",
    "--durations=10",
    "--durations-min=0.5",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=30",
    "--cov-branch",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/alembic/*",
    "*/.venv/*",
]

[tool.coverage.report]
# Coverage threshold aligned with current development status
# Target: 30% (lowered from 49% after removing tests for unimplemented features)
# Removed 36 test files for features not yet implemented (CCNL, Expert Feedback, Payments, FAQ, Phase4)
# Frontend: branches: 58%, functions: 70%, lines: 69.5%, statements: 70%
fail_under = 30
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]

[tool.black]
line-length = 119
exclude = "venv|migrations"

[tool.flake8]
docstring-convention = "all"
ignore = ["D107", "D212", "E501", "W503", "W605", "D203", "D100"]
exclude = "venv|migrations"
max-line-length = 119

# radon
radon-max-cc = 10

[tool.isort]
profile = "black"
multi_line_output = "VERTICAL_HANGING_INDENT"
force_grid_wrap = 2
line_length = 119
skip = ["migrations", "venv"]

[tool.pylint."messages control"]
disable = [
    "line-too-long",
    "trailing-whitespace",
    "missing-function-docstring",
    "consider-using-f-string",
    "import-error",
    "too-few-public-methods",
    "redefined-outer-name",
]

[tool.pylint.master]
ignore = "migrations"

# ============================================================================
# Ruff Configuration - Modern Python Linter & Formatter
# ============================================================================
# Ruff replaces: flake8, isort, pyupgrade, black, pylint
# Documentation: https://docs.astral.sh/ruff/
[tool.ruff]
line-length = 119
target-version = "py313"
exclude = [
    "migrations",
    "*.ipynb",
    "venv",
    ".venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
]

[tool.ruff.lint]
# Rule categories to enable:
# E - pycodestyle errors
# F - pyflakes (undefined names, unused imports)
# B - flake8-bugbear (common bugs & design problems)
# I - isort (import sorting)
# N - pep8-naming (naming conventions)
# UP - pyupgrade (modern Python syntax)
# C4 - flake8-comprehensions (better list/dict comprehensions)
# SIM - flake8-simplify (simplification suggestions)
# ERA - eradicate (commented-out code)
# D - pydocstyle (docstring conventions)
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modernize Python code)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ERA",  # eradicate (commented code)
    "D",    # pydocstyle (docstrings)
]

# Rules to ignore (with reasons):
ignore = [
    "E501",   # Line too long (handled by formatter)
    "F401",   # Unused import (sometimes needed for re-exports)
    # Docstring rules - gradual adoption approach
    "D203",   # 1 blank line before class docstring (conflicts with D211)
    "D213",   # Multi-line summary second line (conflicts with D212)
    "D415",   # First line should end with period (style, not critical)
    "D107",   # Missing docstring in __init__ (too many to fix at once)
    "D101",   # Missing docstring in public class (gradual improvement)
    "D102",   # Missing docstring in public method (gradual improvement)
    "D103",   # Missing docstring in public function (gradual improvement)
    "D104",   # Missing docstring in public package (gradual improvement)
    "D105",   # Missing docstring in magic method (gradual improvement)
    "D100",   # Missing docstring in public module (gradual improvement)
    "D205",   # 1 blank line required between summary and description
    "D200",   # One-line docstring should fit on one line
    # Other rules
    "ERA001", # Commented-out code (often kept intentionally for documentation)
    "UP035",  # typing.Dict/List/etc deprecated (auto-fix with --unsafe-fixes when ready)
    "D106",   # Missing docstring in nested class (gradual improvement)
    "D417",   # Missing argument description in docstring (gradual improvement)
    "N806",   # Variable should be lowercase (too many violations)
    "N818",   # Exception name should end with 'Error' (style preference)
    "N811",   # Constant imported as non-constant (style preference)
    "B007",   # Unused loop control variable (often intentional)
    "B023",   # Function definition does not bind loop variable (complex cases)
    "B904",   # raise-without-from-inside-except (sometimes intentional)
    "B008",   # function-call-in-default-argument (FastAPI uses this)
    "SIM108", # Use ternary operator (sometimes less readable)
    "SIM102", # Use single if instead of nested (sometimes less readable)
    "SIM118", # Use 'in dict' instead of 'in dict.keys()' (minor style)
]

# Auto-fix safe rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

# Per-file rule ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]  # Allow unused imports and late imports in __init__
"tests/**/*.py" = ["D"]  # No docstrings required in tests
"scripts/**/*.py" = ["D"]  # No docstrings required in scripts

# ============================================================================
# MyPy Configuration - Static Type Checker
# ============================================================================
# MyPy catches type errors before runtime
# Documentation: https://mypy.readthedocs.io/
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = false  # Start lenient, enable gradually
disallow_any_generics = false  # Start lenient
disallow_subclassing_any = false  # Start lenient
ignore_missing_imports = true  # Allow missing stubs for third-party libraries

# Exclude directories
exclude = [
    "migrations/",
    "venv/",
    ".venv/",
    "build/",
]

# Per-module configuration
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
